# ecomerce-pydantic-ai

./: pyproject.toml
